2008-03-18  Canniot Thomas <thomas.canniot@mrtomlinux.org>

	* po/fr.po: Updated translation.

2008-03-13  Ankit Patel <ankit@redhat.com>

	* po/gu.po: Updated translation.

2008-03-05  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_cracklib/pam_cracklib.c(pam_sm_chauthtok): Avoid
	unnecessary x_strdup() of resp.
	* modules/pam_ftp/pam_ftp(pam_sm_authenticate): Call _pam_overwrite()
	before dropping password resp.

2008-03-03  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_selinux/pam_selinux.c: Do not translate syslog messages.
	* po/Linux-PAM.pot: Update.

	* libpam/pam_item.c(RESET): Rename to TRY_SET, handle strdup failure.
	(pam_set_item): Use TRY_SET() also for PAM_AUTHTOK and PAM_OLDAUTHTOK.
	Handle allocation failure for PAM_XAUTHDATA.
	(pam_get_user): Return error when conversation returns NULL user.
	Call pam_set_item() instead of RESET().

2008-02-26  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_unix/Makefile.am: Do not link to cracklib.
	* modules/pam_unix/pam_unix_passwd.c(_pam_unix_approve_pass):
	Do not call FascistCheck() from cracklib.

2008-02-29  Fabian Affolter <fab@fedoraproject.org>

	* po/de.po: Updated translation.

2008-02-28  Piotr Drąg <piotrdrag@gmail.com>

	* po/pl.po: Updated translation.

2008-02-26  Tomas Mraz <t8m@centrum.cz>

	* po/LINUGAS: New languages added.
	* po/es.po: Updated translations.
	* po/fr.po: Likewise.
	* po/it.po: Likewise.
	* po/ja.po: Likewise.
	* po/nl.po: Likewise.
	* po/pl.po: Likewise.
	* po/pt_BR.po: Likewise.
	* po/ru.po: Likewise.
	* po/zh_CN.po: Likewise.
	* po/as.po: New file.
	* po/gu.po: Likewise.
	* po/hi.po: Likewise.
	* po/kn.po: Likewise.
	* po/ko.po: Likewise.
	* po/ml.po: Likewise.
	* po/or.po: Likewise.
	* po/si.po: Likewise.
	* po/ta.po: Likewise.

2008-02-21  Tomas Mraz <t8m@centrum.cz>

	* libpam/pam_audit.c (_pam_audit_writelog): Silence syslog
	message on non-error return.

	* modules/pam_unix/unix_chkpwd.c (main): Proceed as unprivileged
	user when checking password of another user.